--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,19 +10,23 @@
 
 version: '3'
 services:
+  # this builds the "planetiler:0.9.2" image on which the other gen-* services are based on
   planetiler:
-    build: .
-    image: planetiler:0.3.0
-    environment:
-      - AREANAME=monaco
-      - RAM_GB=1
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        PLANETILER_VERSION: 0.9.2
+    image: planetiler:0.9.2
     volumes:
       - ./output:/output
       - ./sources:/tmp/data/sources
-
+    command: ["true"]
 
   gen-planet:
-    image: planetiler:0.3.0
+    image: planetiler:0.9.2
+    depends_on:
+      - planetiler    
     environment:
       - AREANAME=planet
       - RAM_GB=100
@@ -33,7 +37,9 @@ services:
 
 
   gen-great-britain:
-    image: planetiler:0.3.0
+    image: planetiler:0.9.2
+    depends_on:
+      - planetiler 
     environment:
       - AREANAME=great-britain
       - RAM_GB=12
@@ -43,7 +49,9 @@ services:
 
 
   gen-monaco:
-    image: planetiler:0.3.0
+    image: planetiler:0.9.2
+    depends_on:
+      - planetiler 
     environment:
       - AREANAME=monaco
       - RAM_GB=1
@@ -53,7 +61,9 @@ services:
 
 
   gen-switzerland:
-    image: planetiler:0.3.0
+    image: planetiler:0.9.2
+    depends_on:
+      - planetiler 
     environment:
       - AREANAME=switzerland
       - RAM_GB=4
@@ -63,7 +73,9 @@ services:
 
 
   gen-sweden:
-    image: planetiler:0.3.0
+    image: planetiler:0.9.2
+    depends_on:
+      - planetiler 
     environment:
       - AREANAME=sweden
       - RAM_GB=4
@@ -74,7 +86,9 @@ services:
 
 
   gen-massachusetts:
-    image: planetiler:0.3.0
+    image: planetiler:0.9.2
+    depends_on:
+      - planetiler 
     environment:
       - AREANAME=massachusetts
       - RAM_GB=4
@@ -84,7 +98,9 @@ services:
 
 
   gen-portugal:
-    image: planetiler:0.3.0
+    image: planetiler:0.9.2
+    depends_on:
+      - planetiler 
     environment:
       - AREANAME=portugal
       - RAM_GB=4
@@ -94,7 +110,9 @@ services:
 
 
   gen-us-pacific:
-    image: planetiler:0.3.0
+    image: planetiler:0.9.2
+    depends_on:
+      - planetiler 
     environment:
       - AREANAME=us-pacific
       - RAM_GB=4
